fixing some alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   line-height: 1.2;
+  
 }
 
 h1, .h1 {
@@ -491,6 +492,16 @@ progress {
   font-size: 1.25rem;
   font-weight: 300;
   width: 800px;
+}
+
+.lead2 {
+  font-size: 1.25rem;
+  font-weight: 300;
+  text-align: center;
+}
+
+.lead3{
+  text-align: center;
 }
 
 .display-1 {
